--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -6,13 +6,15 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="262.0" prefWidth="660.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
    <children>
-      <Button fx:id="button_encrypt" layoutX="240.0" layoutY="254.0" mnemonicParsing="false" onAction="#encrypt" text="Encrypt" />
-      <Button fx:id="button_loadFile" layoutX="268.0" layoutY="94.0" mnemonicParsing="false" onAction="#loadFile" text="Load File" />
-      <Label fx:id="label_filePath" layoutX="29.0" layoutY="126.0" text="File Path" />
-      <Button fx:id="button_choosePicture" layoutX="253.0" layoutY="162.0" mnemonicParsing="false" onAction="#loadPicture" text="Choose Picture" />
-      <Label fx:id="label_picturePath" layoutX="29.0" layoutY="192.0" text="Picture Path" />
-      <Button fx:id="button_decrypt" layoutX="303.0" layoutY="254.0" mnemonicParsing="false" onAction="#decrypt" text="Decrypt" />
+      <Button fx:id="button_encrypt" layoutX="15.0" layoutY="95.0" mnemonicParsing="false" onAction="#encrypt" text="Encrypt" />
+      <Button fx:id="button_loadFile" layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#loadFile" prefHeight="27.0" prefWidth="112.0" text="Load File" />
+      <Label fx:id="label_filePath" layoutX="145.0" layoutY="19.0" text="File Path" />
+      <Button fx:id="button_choosePicture" layoutX="14.0" layoutY="54.0" mnemonicParsing="false" onAction="#loadPicture" text="Choose Picture" />
+      <Label fx:id="label_picturePath" layoutX="145.0" layoutY="59.0" text="Picture Path" />
+      <Button fx:id="button_decrypt" layoutX="14.0" layoutY="221.0" mnemonicParsing="false" onAction="#decrypt" text="Decrypt" />
+      <Button fx:id="button_chooseEncryptedPicture" layoutX="14.0" layoutY="184.0" mnemonicParsing="false" onAction="#loadEncryptedPicture" prefHeight="27.0" prefWidth="112.0" text="Load Encrypted Picture" />
+      <Label fx:id="label_encryptedPicturePath" layoutX="145.0" layoutY="189.0" text="File Path" />
    </children>
 </AnchorPane>
