--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -1,20 +1,54 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.image.*?>
+<?import javafx.scene.text.*?>
 <?import java.lang.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="262.0" prefWidth="660.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="405.0" prefWidth="750.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
    <children>
-      <Button fx:id="button_encrypt" layoutX="15.0" layoutY="95.0" mnemonicParsing="false" onAction="#encrypt" text="Encrypt" />
-      <Button fx:id="button_loadFile" layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#loadFile" prefHeight="27.0" prefWidth="112.0" text="Load File" />
-      <Label fx:id="label_filePath" layoutX="145.0" layoutY="19.0" text="File Path" />
-      <Button fx:id="button_choosePicture" layoutX="14.0" layoutY="54.0" mnemonicParsing="false" onAction="#loadPicture" text="Choose Picture" />
-      <Label fx:id="label_picturePath" layoutX="145.0" layoutY="59.0" text="Picture Path" />
-      <Button fx:id="button_decrypt" layoutX="14.0" layoutY="221.0" mnemonicParsing="false" onAction="#decrypt" text="Decrypt" />
-      <Button fx:id="button_chooseEncryptedPicture" layoutX="14.0" layoutY="184.0" mnemonicParsing="false" onAction="#loadEncryptedPicture" prefHeight="27.0" prefWidth="112.0" text="Load Encrypted Picture" />
-      <Label fx:id="label_encryptedPicturePath" layoutX="145.0" layoutY="189.0" text="File Path" />
+      <TabPane prefHeight="405.0" prefWidth="750.0" tabClosingPolicy="UNAVAILABLE">
+        <tabs>
+          <Tab text="Encrypt">
+            <content>
+              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                     <children>
+                        <Button fx:id="button_encrypt" layoutX="624.0" layoutY="331.0" mnemonicParsing="false" onAction="#encrypt" text="Run Encryption" />
+                        <Button fx:id="button_loadFile" layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#loadFile" prefHeight="27.0" prefWidth="112.0" text="Load File" />
+                        <Label fx:id="label_documentName" layoutX="296.0" layoutY="19.0" />
+                        <Button fx:id="button_choosePicture" layoutX="14.0" layoutY="54.0" mnemonicParsing="false" onAction="#loadPicture" text="Choose Picture" />
+                        <Label fx:id="label_pictureName" layoutX="296.0" layoutY="59.0" />
+                        <Label fx:id="label_documentFileSize" layoutX="183.0" layoutY="19.0" />
+                        <Label fx:id="label_pictureFileSize" layoutX="183.0" layoutY="59.0" />
+                        <Label layoutX="145.0" layoutY="19.0" text="Size:" />
+                        <Label layoutX="145.0" layoutY="59.0" text="Size:" />
+                        <Label layoutX="262.0" layoutY="59.0" text="File:" />
+                        <Label layoutX="262.0" layoutY="19.0" text="File:" />
+                        <Label fx:id="label_pictureResolution" layoutX="14.0" layoutY="111.0" />
+                        <Label fx:id="label_encryptError" layoutX="14.0" layoutY="143.0" textFill="RED" />
+                     </children>
+                  </AnchorPane>
+            </content>
+          </Tab>
+          <Tab text="Decrypt">
+            <content>
+              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                     <children>
+                        <Button fx:id="button_decrypt" layoutX="623.0" layoutY="331.0" mnemonicParsing="false" onAction="#decrypt" text="Run Decryption" />
+                        <Button fx:id="button_chooseEncryptedPicture" layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#loadEncryptedPicture" prefHeight="27.0" prefWidth="112.0" text="Choose Picture" />
+                        <Label fx:id="label_encryptedPictureFileSize" layoutX="183.0" layoutY="19.0" />
+                        <Label fx:id="label_encryptedPictureName" layoutX="296.0" layoutY="19.0" />
+                        <Label layoutX="145.0" layoutY="19.0" text="Size:" />
+                        <Label layoutX="262.0" layoutY="19.0" text="File:" />
+                        <Label fx:id="label_decryptError" layoutX="24.0" layoutY="59.0" textFill="RED" />
+                     </children>
+                  </AnchorPane>
+            </content>
+          </Tab>
+        </tabs>
+      </TabPane>
    </children>
 </AnchorPane>
