--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.media.*?>
 <?import javafx.scene.image.*?>
 <?import javafx.scene.text.*?>
 <?import java.lang.*?>
@@ -48,11 +49,11 @@
                   </AnchorPane>
             </content>
           </Tab>
-            <Tab text="Contacts">
+            <Tab onSelectionChanged="#loadUsers" text="Contacts">
               <content>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                      <children>
-                        <ListView prefHeight="377.0" prefWidth="321.0" />
+                        <ListView fx:id="listView" prefHeight="377.0" prefWidth="321.0" />
                         <Label layoutX="347.0" layoutY="14.0" text="Name" />
                         <TextField layoutX="347.0" layoutY="121.0" />
                         <Button layoutX="347.0" layoutY="48.0" mnemonicParsing="false" text="Generate Key for Exchange" />
@@ -60,7 +61,7 @@
                         <Label layoutX="526.0" layoutY="52.0" text="Exchange Key" />
                         <Button layoutX="506.0" layoutY="121.0" mnemonicParsing="false" text="Submit" />
                         <Label layoutX="347.0" layoutY="92.0" text="Enter Exchanged Key" />
-                        <CheckBox disable="true" layoutX="366.0" layoutY="171.0" mnemonicParsing="false" text="Gemneinsamer Schlüssel generiert" />
+                        <Label layoutX="347.0" layoutY="171.0" text="Gemeinsamer Schlüßel Generiert" />
                      </children>
                   </AnchorPane>
               </content>
