--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -68,9 +68,12 @@
               <content>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                      <children>
-                        <TextField layoutX="20.0" layoutY="20.0" />
-                        <Label layoutX="192.0" layoutY="24.0" text="Name" />
-                        <Button layoutX="50.0" layoutY="61.0" mnemonicParsing="false" text="Add User" />
+                        <TextField fx:id="textField_UserName" layoutX="100.0" layoutY="19.0" prefHeight="27.0" prefWidth="636.0" />
+                        <Label layoutX="14.0" layoutY="24.0" text="Name:" />
+                        <Button fx:id="button_addUser" layoutX="641.0" layoutY="331.0" mnemonicParsing="false" onAction="#addUser" text="Add Contact" />
+                        <CheckBox fx:id="checkBox_publicKey" layoutX="14.0" layoutY="73.0" mnemonicParsing="false" onAction="#checkBoxState" text="This User initiated the Key Exchange" />
+                        <Label fx:id="label_publicKey" layoutX="14.0" layoutY="109.0" text="Public Key:" visible="false" />
+                        <TextArea fx:id="textArea_publicKey" layoutX="100.0" layoutY="109.0" prefHeight="200.0" prefWidth="636.0" visible="false" />
                      </children>
                   </AnchorPane>
               </content>
