--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -47,11 +47,11 @@
                   </AnchorPane>
             </content>
           </Tab>
-            <Tab onSelectionChanged="#loadUsers" text="Contacts">
+            <Tab text="Contacts">
               <content>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                      <children>
-                        <ListView fx:id="listView_Users" onMouseClicked="#selectUserItem" prefHeight="377.0" prefWidth="321.0" />
+                        <ListView fx:id="listView_Users" prefHeight="377.0" prefWidth="321.0" />
                         <Label fx:id="label_userName" layoutX="347.0" layoutY="14.0" text="Name" />
                         <TextField layoutX="347.0" layoutY="121.0" />
                         <Button layoutX="347.0" layoutY="48.0" mnemonicParsing="false" text="Generate Key for Exchange" />
@@ -68,12 +68,13 @@
               <content>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                      <children>
-                        <TextField fx:id="textField_UserName" layoutX="100.0" layoutY="19.0" prefHeight="27.0" prefWidth="636.0" />
+                        <TextField fx:id="textField_UserName" layoutX="81.0" layoutY="19.0" prefHeight="27.0" prefWidth="655.0" />
                         <Label layoutX="14.0" layoutY="24.0" text="Name:" />
                         <Button fx:id="button_addUser" layoutX="641.0" layoutY="331.0" mnemonicParsing="false" onAction="#addUser" text="Add Contact" />
                         <CheckBox fx:id="checkBox_publicKey" layoutX="14.0" layoutY="73.0" mnemonicParsing="false" onAction="#checkBoxState" text="This User initiated the Key Exchange" />
-                        <Label fx:id="label_publicKey" layoutX="14.0" layoutY="109.0" text="Public Key:" visible="false" />
-                        <TextArea fx:id="textArea_publicKey" layoutX="100.0" layoutY="109.0" prefHeight="200.0" prefWidth="636.0" visible="false" />
+                        <Label fx:id="label_publicKey" layoutX="149.0" layoutY="117.0" text="Public Key:" visible="false" />
+                        <Button fx:id="button_loadPublicKey" layoutX="14.0" layoutY="112.0" mnemonicParsing="false" onAction="#loadPublicKey" text="Load Public Key" visible="false" />
+                        <Label fx:id="label_publicKeyFile" layoutX="230.0" layoutY="117.0" visible="false" />
                      </children>
                   </AnchorPane>
               </content>
