--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -47,39 +47,37 @@
                   </AnchorPane>
             </content>
           </Tab>
-          <Tab onSelectionChanged="#listView_loadUsers" text="Contacts">
+          <Tab onSelectionChanged="#resetTabContacts" text="Contacts">
             <content>
-              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="370.0" prefWidth="750.0">
                      <children>
-                        <Label fx:id="label_userName" layoutX="347.0" layoutY="14.0" text="Name" />
-                        <TextField layoutX="347.0" layoutY="121.0" />
-                        <Button layoutX="347.0" layoutY="48.0" mnemonicParsing="false" text="Generate Key for Exchange" />
-                        <Label layoutX="461.0" layoutY="43.0" />
-                        <Label layoutX="526.0" layoutY="52.0" text="Exchange Key" />
-                        <Button layoutX="506.0" layoutY="121.0" mnemonicParsing="false" text="Submit" />
-                        <Label layoutX="347.0" layoutY="92.0" text="Enter Exchanged Key" />
-                        <Label layoutX="347.0" layoutY="171.0" text="Gemeinsamer Schlüßel Generiert" />
-                        <TableView fx:id="tableView_users" layoutY="-1.0" onKeyReleased="#selectUserInView" onMouseClicked="#selectUserInView" prefHeight="377.0" prefWidth="313.0">
+                        <TableView fx:id="tableView_users" layoutY="-1.0" onKeyReleased="#selectUserInView" onMouseClicked="#selectUserInView" prefHeight="373.0" prefWidth="314.0">
                           <columns>
-                            <TableColumn fx:id="tableColumn_id" prefWidth="55.0" text="ID" />
-                            <TableColumn fx:id="tableColumn_name" prefWidth="257.0" text="NAME" />
+                            <TableColumn fx:id="tableColumn_id" prefWidth="63.0" resizable="false" text="ID" />
+                            <TableColumn fx:id="tableColumn_name" prefWidth="233.0" resizable="false" sortable="false" text="NAME" />
                           </columns>
                         </TableView>
+                        <Label fx:id="label_userName" layoutX="338.0" layoutY="20.0" />
+                        <Label fx:id="label_exportPubKey" layoutX="338.0" layoutY="69.0" prefHeight="17.0" prefWidth="383.0" text="This person might need your public key to finish setup." wrapText="true" />
+                        <Button fx:id="button_exportPublicKey" layoutX="339.0" layoutY="97.0" mnemonicParsing="false" onAction="#exportPublicKey" text="Export Public Key" />
+                        <Label fx:id="label_setupStatus" layoutX="338.0" layoutY="180.0" wrapText="true" />
+                        <Label fx:id="label_importPubKey" layoutX="338.0" layoutY="204.0" prefHeight="34.0" prefWidth="383.0" text="To finish key exchange and generate symmetric crypto keys please import this persons public key." wrapText="true" />
+                        <Button fx:id="button_importPublicKey" layoutX="338.0" layoutY="251.0" mnemonicParsing="false" onAction="#importPublicKey" text="Import Public Key" />
+                        <Button fx:id="button_deleteContact" layoutX="626.0" layoutY="331.0" mnemonicParsing="false" onAction="#deleteUser" text="Delete Contact" />
                      </children>
                   </AnchorPane>
               </content>
             </Tab>
-            <Tab text="New User">
+            <Tab onSelectionChanged="#resetTabNewUser" text="New Contact">
               <content>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                      <children>
                         <TextField fx:id="textField_UserName" layoutX="81.0" layoutY="19.0" prefHeight="27.0" prefWidth="655.0" />
                         <Label layoutX="14.0" layoutY="24.0" text="Name:" />
                         <Button fx:id="button_addUser" layoutX="641.0" layoutY="331.0" mnemonicParsing="false" onAction="#addUser" text="Add Contact" />
-                        <CheckBox fx:id="checkBox_publicKey" layoutX="14.0" layoutY="73.0" mnemonicParsing="false" onAction="#checkBoxState" text="This User initiated the Key Exchange" />
+                        <CheckBox fx:id="checkBox_publicKey" layoutX="14.0" layoutY="73.0" mnemonicParsing="false" onAction="#checkBoxState" text="This person initialized the key exchange." />
                         <Label fx:id="label_publicKey" layoutX="149.0" layoutY="117.0" text="Public Key:" visible="false" />
                         <Button fx:id="button_loadPublicKey" layoutX="14.0" layoutY="112.0" mnemonicParsing="false" onAction="#loadPublicKey" text="Load Public Key" visible="false" />
-                        <Label fx:id="label_publicKeyFile" layoutX="230.0" layoutY="117.0" visible="false" />
                      </children>
                   </AnchorPane>
               </content>
