--- a/src/main/View.fxml
+++ b/src/main/View.fxml
@@ -17,7 +17,7 @@
                         <Button layoutX="14.0" layoutY="78.0" mnemonicParsing="false" onAction="#loadFile" prefHeight="27.0" prefWidth="112.0" text="Load File" />
                         <Label fx:id="label_documentFileSize" layoutX="162.0" layoutY="83.0" />
                         <Label fx:id="label_documentName" layoutX="288.0" layoutY="83.0" prefHeight="17.0" prefWidth="446.0" />
-                        <Button layoutX="14.0" layoutY="118.0" mnemonicParsing="false" onAction="#loadPicture" text="Choose Picture" />
+                        <Button layoutX="14.0" layoutY="118.0" mnemonicParsing="false" onAction="#loadPicture" prefHeight="27.0" prefWidth="112.0" text="Choose Picture" />
                         <Label fx:id="label_pictureFileSize" layoutX="162.0" layoutY="123.0" />
                         <Label fx:id="label_pictureName" layoutX="288.0" layoutY="123.0" prefHeight="17.0" prefWidth="445.0" />
                         <ChoiceBox fx:id="choiseBox_encryptionUser" layoutX="421.0" layoutY="331.0" prefHeight="27.0" prefWidth="190.0" />
@@ -58,11 +58,11 @@
                         </TableView>
                         <Label fx:id="label_userName" layoutX="338.0" layoutY="20.0" />
                         <Label fx:id="label_exportPubKey" layoutX="338.0" layoutY="69.0" prefHeight="17.0" prefWidth="383.0" text="This person might need your public key to finish setup." wrapText="true" />
-                        <Button fx:id="button_exportPublicKey" layoutX="339.0" layoutY="97.0" mnemonicParsing="false" onAction="#exportPublicKey" text="Export Public Key" />
+                        <Button fx:id="button_exportPublicKey" layoutX="339.0" layoutY="97.0" mnemonicParsing="false" onAction="#exportPublicKey" prefHeight="27.0" prefWidth="127.0" text="Export Public Key" />
                         <Label fx:id="label_setupStatus" layoutX="338.0" layoutY="180.0" wrapText="true" />
                         <Label fx:id="label_importPubKey" layoutX="338.0" layoutY="204.0" prefHeight="34.0" prefWidth="383.0" text="To finish key exchange and generate symmetric crypto keys please import this persons public key." wrapText="true" />
-                        <Button fx:id="button_importPublicKey" layoutX="338.0" layoutY="251.0" mnemonicParsing="false" onAction="#importPublicKey" text="Import Public Key" />
-                        <Button fx:id="button_deleteContact" layoutX="626.0" layoutY="331.0" mnemonicParsing="false" onAction="#deleteUser" text="Delete Contact" />
+                        <Button fx:id="button_importPublicKey" layoutX="338.0" layoutY="251.0" mnemonicParsing="false" onAction="#importPublicKey" prefHeight="27.0" prefWidth="127.0" text="Import Public Key" />
+                        <Button fx:id="button_deleteContact" layoutX="626.0" layoutY="331.0" mnemonicParsing="false" onAction="#deleteUser" prefHeight="27.0" prefWidth="110.0" text="Delete Contact" />
                      </children>
                   </AnchorPane>
               </content>
@@ -73,10 +73,10 @@
                      <children>
                         <TextField fx:id="textField_UserName" layoutX="81.0" layoutY="19.0" prefHeight="27.0" prefWidth="655.0" />
                         <Label layoutX="14.0" layoutY="24.0" text="Name:" />
-                        <Button layoutX="641.0" layoutY="331.0" mnemonicParsing="false" onAction="#addUser" text="Add Contact" />
+                        <Button layoutX="641.0" layoutY="331.0" mnemonicParsing="false" onAction="#addUser" prefHeight="27.0" prefWidth="95.0" text="Add Contact" />
                         <CheckBox fx:id="checkBox_publicKey" layoutX="14.0" layoutY="73.0" mnemonicParsing="false" onAction="#checkBoxState" text="This person initialized the key exchange." />
                         <Label fx:id="label_publicKey" layoutX="149.0" layoutY="117.0" visible="false" />
-                        <Button fx:id="button_loadPublicKey" layoutX="14.0" layoutY="112.0" mnemonicParsing="false" onAction="#loadPublicKey" text="Load Public Key" visible="false" />
+                        <Button fx:id="button_loadPublicKey" layoutX="14.0" layoutY="112.0" mnemonicParsing="false" onAction="#loadPublicKey" prefHeight="27.0" prefWidth="117.0" text="Load Public Key" visible="false" />
                      </children>
                   </AnchorPane>
               </content>
